# personal-finance-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  SKETCHED-BOOTSTRAP.txt  alembic.ini  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
docs/: chatbot-ux-overhaul.md
migrations/: env.py
migrations/versions/: 20260703_0001_initial_schema.py  20260709_25a29bebb464_conversation_sessions_and_user_memories.py
src/finassist/: __main__.py  app.py
src/finassist/api/: routes.py
src/finassist/core/: config.py  logging.py
src/finassist/db/: models.py  session.py
src/finassist/integrations/openrouter/: client.py  errors.py
src/finassist/integrations/pluggy/: client.py  errors.py  models.py
src/finassist/repositories/: accounts.py  conversations.py  memories.py  sync_runs.py  transactions.py  users.py
src/finassist/services/: finance.py  sync.py
src/finassist/services/agent/: prompts.py  service.py  tools.py
src/finassist/telegram/: bot.py  handlers.py  inbox.py  middlewares.py  rendering.py  runner.py  turns.py
tests/: conftest.py  factories.py
tests/integration/: conftest.py  test_agent_flow.py  test_conversation_sessions.py  test_health.py  test_repositories.py  test_sync_service.py  test_turn_processor.py
tests/unit/: test_agent_service.py  test_config.py  test_finance_service.py  test_inbox.py  test_openrouter_client.py  test_pluggy_client.py  test_prompts.py  test_rendering.py  test_retry_middleware.py  test_sync_refresh.py
