[project]
name = "personal-finance-assistant"
version = "0.1.0"
description = "AI-native Telegram bot for Brazilian personal finance."
requires-python = ">=3.13,<3.14"
authors = [{name = "Renato Pinheiro"}]
dependencies = [
  "fastapi>=0.115,<0.140",
  "uvicorn[standard]>=0.34,<0.50",
  "sqlalchemy[asyncio]>=2.0,<2.1",
  "asyncpg>=0.30,<0.31",
  "alembic>=1.14,<1.19",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "aiogram>=3.17,<3.30",
  "httpx>=0.28,<0.29",
  "openai>=1.59,<2",
  "structlog>=25,<27",
  "greenlet>=3.1,<4",
  "telegramify-markdown (>=1.2,<2)",
]

[tool.poetry]
packages = [{include = "finassist", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3,<10"
pytest-asyncio = ">=0.25,<2"
respx = ">=0.22,<0.23"
testcontainers = {version = ">=4.9,<5", extras = ["postgres"]}
ruff = ">=0.9,<0.16"
mypy = ">=1.15,<3"
pre-commit = ">=4,<5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "DTZ", "T20", "SIM", "PTH", "RUF", "ASYNC", "S"]
per-file-ignores = {"tests/**" = ["S101", "S106"], "migrations/**" = ["I001"]}

[tool.ruff.lint.isort]
known-first-party = ["finassist"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["testcontainers.*", "respx.*"]
ignore_missing_imports = true

# telegramify-markdown publishes annotations but does not include a py.typed marker.
[[tool.mypy.overrides]]
module = ["telegramify_markdown", "telegramify_markdown.*"]
follow_untyped_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = ["integration: tests that require Docker and PostgreSQL"]
